Opened 7 years ago
Closed 5 years ago
#13694 closed bug (fixed)
[intel_extreme] Boot failure on Dual Core Pentium 2GHz
Reported by: | Sabex | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Graphics/intel_extreme/g45 | Version: | R1/Development |
Keywords: | boot-failure, has-workaround | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description (last modified by )
Machine boots using intel_extreme driver only rarely.
Selecting VESA mode always allows booting.
Machine Spec: Acer Extensa 5630 4GB RAM Intel Mobile series 4 integrated graphics
PCI Information:
Device/type 0x3 device/subtype 0x80 device/interface 0x0 device/vendor 0x8086 device/id 0x2a43 device/type 0x3 device/subtype 0x0 device/interface 0x0 device/vendor 0x8086 device/id 0x2a42
intel_extreme specific entries to syslog:
KERN: intel_extreme: CALLED status_t init_hardware() KERN: intel_extreme: CALLED status_t init_driver() KERN: intel_extreme: detect_intel_pch: No PCH detected. KERN: intel_extreme: (0) GM45, revision = 0x7 KERN: intel_extreme: CALLED const char ** publish_devices() KERN: intel_extreme: CALLED struct device_hooks * find_device(const char *) KERN: loaded driver /boot/system/add-ons/kernel/drivers/dev/graphics/intel_extreme KERN: devfs: "intel_810" api_version missing
Attachments (4)
Change History (22)
comment:1 by , 7 years ago
comment:2 by , 7 years ago
I can't seem to upload the files to Trac with either Qupzilla or WebPositive, so the first syslog is here:
comment:3 by , 7 years ago
patch: | 0 → 1 |
---|
comment:4 by , 7 years ago
patch: | 1 → 0 |
---|
comment:5 by , 7 years ago
I can confirm this bug still exists in 32 bit Nightly 51507 gcc2 hybrid.
Please advise as to how I can help you obtain any more information.
by , 7 years ago
Attachment: | syslog.old added |
---|
Syslog after failed reboot (and then cold boot with safe mode VESA driver)
comment:6 by , 7 years ago
Component: | Audio & Video → Drivers/Graphics/intel_extreme |
---|---|
Description: | modified (diff) |
Owner: | changed from | to
Summary: | [hrev51399 32-bit hybrid] Boot failure on Dual Core Pentium 2GHz → [intel_extreme] Boot failure on Dual Core Pentium 2GHz |
comment:7 by , 7 years ago
I tried to blacklist the driver by making a file:
/boot/system/settings/packages
Which I populated with this text:
Package haiku { EntryBlacklist { add-ons/accelerants/intel_extreme.accelerant add-ons/kernel/drivers/graphics/intel_extreme } }
but I still need to boot in VESA safe graphics mode. Does that mean it isn't the intel xtreme driver that's causing the issue?
comment:8 by , 7 years ago
There is a simpler way to force VESA mode (not sure why everyone went with the blacklist for that).
Edit /home/config/settings/kernel/drivers/kernel
Uncomment the "fail_safe_video_mode true" line (at the end).
comment:9 by , 7 years ago
I'll do that, thanks.
Also, I booted with the kernel messages, and it seems that the intel xtreme driver is loading correctly, but then outputs "Could not intitialize graphics output. Exiting."
Just for fun I then tried forcing different screen resolutions, but it didn't help.
comment:10 by , 7 years ago
Keywords: | boot-failure has-workaround added |
---|
comment:11 by , 6 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
comment:14 by , 5 years ago
Component: | Drivers/Graphics/intel_extreme → Drivers/Graphics/intel_extreme/g45 |
---|---|
Owner: | changed from | to
comment:15 by , 5 years ago
Status: | new → in-progress |
---|
comment:17 by , 5 years ago
Priority: | high → normal |
---|
comment:18 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
There should be a lot more logs from the intel_extreme driver (setting up PLLs, etc). Ideally, include complete syslogs from both when it boots, and when it doesn't, so we can see if anything looks different in each case.